--- a/digital.html
+++ b/digital.html
@@ -121,7 +121,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Reglamento de Actuación y Funcionalidad del setor público por medios electrónicos</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032&p=20220712&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032" target="_blank">Real Decreto 203/2021, de 30 de marzo, por el que se aprueba el Reglamento de actuación y funcionamiento del sector público por medios electrónicos.</a></div>
 
 		</div>
@@ -130,8 +130,8 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Esquema Nacional de Seguridad</div>
-		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2022-7191" target="_blank">Real Decreto 311/2022, de 3 de mayo, por el que se regula el Esquema Nacional de Seguridad</a></div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-7191&p=20220504&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-7191&p=20220504&tn=1" target="_blank">Real Decreto 311/2022, de 3 de mayo, por el que se regula el Esquema Nacional de Seguridad</a></div>
 
 		</div>
   </div>
@@ -149,6 +149,9 @@
 		  <div class="col-sm-2">Protecció de Dades</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/11040&L=0" target="_blank">RESOLUCIÓ de 28 de juny de 2018, de la Sotssecretaria de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es dicten instruccions per al compliment de la normativa de protecció de dades en els centres educatius públics de titularitat de la Generalitat. [2018/11040]</a></div>
+
+
+	  	<br />
 
 		</div>
 		
@@ -197,6 +200,9 @@
 
 		</div>
 
+	  	<br />
+
+
 		<div class="row">
 		  <div class="col-sm-2">Transformació Digital</div>
 		  <div class="col-sm-1">INDEX</div>
@@ -208,7 +214,7 @@
   </div>
 
   		<br />
-		<br/>
+  		<br />
 
 
 		<h3>Documents</h3>
@@ -216,7 +222,6 @@
 		<hr />
 
   <div class="tab-pane fade show active" id="Documents">
-		<br/>
 
 		<div class="row">
 		  <div class="col-sm-2">Plan Nacional de Competencias Digitales</div>
@@ -225,6 +230,8 @@
 
 		</div>
 		
+  		<br />
+
 		<div class="row">
 		  <div class="col-sm-2">EU Itinerario hacia la Década Digital</div>
 		  <div class="col-sm-1">INDEX</div>
