--- a/digital.html
+++ b/digital.html
@@ -178,7 +178,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Centre d'Innovació Digital Avançat</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6853&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=6853&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juliol de 2022, de la conselleria d'Educació, Cultura i Esport, per la qual es creen els Centres de Formació, Innovació i Recursos Educatius Específics Digital Docent i Centre d'Innovació Digital Avançat de la Comunitat Valenciana. [2022/6853].</a></div>
 
 		</div>
@@ -196,7 +196,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">España Digital</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">GLOBAL</span></div>
 		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/" target="_blank">España Digital 2026</a></div>
 
 		</div>
@@ -206,7 +206,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Transformació Digital</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">GLOBAL</span></div>
 		  <div class="col-sm-8"><a href="https://portal.mineco.gob.es/es-es/Paginas/index.aspx" target="_blank">Ministeri d'Afers Econòmics i de Transformació Digital</a></div>
 
 		</div>
@@ -226,7 +226,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Plan Nacional de Competencias Digitales</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">GLOBAL</span></div>
 		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/sites/espanadigital/files/2022-06/Plan%20Nacional%20de%20Competencias%20Digitales.pdf" target="_blank">Plan Nacional de Competencias Digitales</a></div>
 
 		</div>
@@ -235,7 +235,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">EU Itinerario hacia la Década Digital</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">GLOBAL</span></div>
 		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/sites/espanadigital/files/2022-06/Propuesta%20de%20Itinerario%20hacia%20la%20D%C3%A9cada%20Digital%20para%202030.pdf" target="_blank">DECISIÓN DEL PARLAMENTO EUROPEO Y DEL CONSEJO por la que se establece el programa de política «Itinerario hacia la Década Digital» para 2030</a></div>
 
 		</div>
@@ -244,7 +244,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Carta de Derechos Digitales</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">GLOBAL</span></div>
 		  <div class="col-sm-8"><a href="https://portal.mineco.gob.es/RecursosNoticia/mineco/prensa/ficheros/Carta_Derechos_Digitales_RedEs.pdf" target="_blank">Carta de Derechos Digitales</a></div>
 
 		</div>
