--- a/normativa.html
+++ b/normativa.html
@@ -363,33 +363,36 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions Inici Curs</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6454&L=0" target="_blank"> RESOLUCIÓ de 5 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2022-2023. [2022/6454]</a></div>
 		</div>
 		
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">2022-2023 Pla de Formació</div>
-		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
-		</div>
-		
-		<br />
-		
-		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions Secundària</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
 		</div>
 		
 		<br />
 		
-		<div class="row">
+	
 		  <div class="col-sm-2">2022-2023 Instruccions CEE</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
 		</div>
+		
+		<br />
+		
+		<div class="row">
+		  <div class="col-sm-2">2022-2023 Pla de Formació</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
+		</div>
+		
+		<br />
+		
 		
  
   <div class="tab-pane fade show active" id="Resolució">
